<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_description">"Change values of framework-res.apk. Tap here to configure settings."</string>
    <string name="label_icontext">Show text beside icon on action bar</string>
    <string name="label_ledoff">Turn off LED when charge completed</string>
    <string name="label_unplugon">"Don\'t turn on screen when unplug"</string>
    <string name="label_noisy">Disable warning for big volume</string>
    <string name="label_volsound">Disable volume change sound</string>
    <string name="label_skipnet">"Skip restoring network mode"</string>
    <string name="label_dim">Change min brightness level to 5</string>
    <string name="label_ime">"Disable \"Choose input method\" notification"</string>
    <string name="label_notifbg">Make notification drawer icon bg transparent</string>
    <string name="label_monx">"Translate monXdifiedZ's power menu to Japanese"</string>
    <string name="sum_icontext">Show description of the icon on action bar.</string>
    <string name="sum_ledoff">Turn off LED when charging is completely finished.</string>
    <string name="sum_unplugon">"Don\'t turn on screen automatically when you start/stop charging."</string>
    <string name="sum_noisy">Disable warning when you turn up the volume with headphone connected.\nBe careful not to turn up too high.</string>
    <string name="sum_volsound">Disable sound when you change the volume.</string>
    <string name="sum_skipnet">"Don\'t restore network mode when you change the network."</string>
    <string name="sum_dim">You can change brightness to 5 in Display settings.</string>
    <string name="sum_ime">"Disable \"Choose input method\" notification when you type texts."</string>
    <string name="sum_notifbg">Change color of icon background of notification drawer to transparent.</string>
    <string name="sum_monx">"Translate HONAMiXZ\'s power menu to Japanese."</string>
    <string name="label_voice">Fix cell standby problem</string>
    <string name="sum_voice">Fix cell standby problem on data only SIM.</string>
    <string name="label_unplugdock">Disable auto-rotation in dock</string>
    <string name="sum_unplugdock">Disable force auto-rotation in desk/car dock mode.</string>
    <string name="label_lockrot">Allow rotation in lock screen</string>
    <string name="sum_lockrot">You can rotate lock screen.</string>
    <string name="label_lockmenu">Show menu key in lock screen</string>
    <string name="sum_lockmenu">Don\'t hide menu key in lock screen.</string>
    <string name="label_prefapn">Don\'t prefer APN</string>
    <string name="sum_prefapn">Do not prefer APN.</string>
    <string name="label_hideime">Don\'t force camera sound</string>
    <string name="sum_hideime">Show shutter sound setting in camera.</string>
    <string name="label_glove">Show glove mode setting</string>
    <string name="sum_glove">Show glove mode setting</string>
    <string name="label_navbar">Navbar 36dpi</string>
    <string name="sum_navbar">Change navbar height</string>
    <string name="label_boost">CPU boost for overscroller fing</string>
    <string name="sum_boost">"Experimental, I don't know if it really works."</string>
    <string name="label_autob">Change auto brightness levels</string>
    <string name="sum_autob">Change auto brightnesss levels as you like. Please change values below.</string>
    <string name="label_autob_i">Auto brightness level</string>
    <string name="sum_autob_i">This will change light sensor LUX values. Note: Values must be same number of items of Auto brightness LCD level and separated by a comma</string>
    <string name="label_autob_i2">Auto brightness LCD level</string>
    <string name="sum_autob_i2">This is LCD backlight levels corresponding to the above LUX values. Note: Values must be same number of items of Auto brightness level and separated by a comma</string>
    <string name="label_monxz1">"Translate monXdifiedZ's power menu to Japanese"</string>
    <string name="sum_monxz1">"Translate Honam1Z\'s power menu to Japanese."</string>
    <string name="label_fixjpnz3">Fix Japanese translation for Z3</string>
    <string name="sum_fixjpnz3">For Japanese language only. Change translation for power menu.</string>
    <string name="label_fixjpnz32">Fix Japanese translation for Z3 [Alt ver]</string>
    <string name="sum_fixjpnz32">For Japanese language only. Change translation for power menu.</string>
    <string name="label_purepaste">Prevent inserting spaces when pasting</string>
    <string name="sum_purepaste">Prevent inserting spaces before and after words when you paste it.</string>
    <string name="label_wifiband">Select Wi-Fi band</string>
    <string name="sum_wifiband">Option for selecting frequency band of Wi-Fi will be shown in Wi-Fi settings.</string>
    <string name="label_antiproto">Anti-PrototypeProtection</string>
    <string name="sum_antiproto">Kill PrototypeProtection. Use this if you get \"net::ERR_NAME_NOT_RESOLVED\" error when you visit xda. I recommend disabling or deleting PrototypeProtection.apk in /system/app, though.</string>
    <string name="label_remove_screenshot_delay">Remove screenshot delay</string>
    <string name="sum_remove_screenshot_delay">Remove small delay when you take screenshot.</string>
    <string name="label_rebootaf">Note</string>
    <string name="nosum">You may need to reboot for changes to take effect.</string>
</resources>
